<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator2">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo_image"
                android:layout_width="200dp"
                android:layout_height="100dp"

                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/title_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ieeeeeeeeeee"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="154dp"
                android:layout_height="wrap_content"

                android:layout_centerVertical="true"
                android:layout_marginStart="22dp"
                android:layout_toEndOf="@+id/logo_image"
                android:layout_toRightOf="@+id/logo_image"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/black"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/logo_image"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Values"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toTopOf="@+id/n_val"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:entries="@array/area"
            android:textColor="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/n_val"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="Nitrogen"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/p_val"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/p_val"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="Phosphorus"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/n_val"
            app:layout_constraintEnd_toStartOf="@+id/k_val"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/n_val"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/k_val"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="potassium"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/n_val"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/p_val"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/rate"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/n_amt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/n_val"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <EditText
            android:id="@+id/n_amt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="###"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/rate2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/n_amt"
            app:layout_constraintEnd_toStartOf="@+id/spinner1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/n_amt" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/totalArea"
            android:textStyle="bold|italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/area_num"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/n_amt" />

        <EditText
            android:id="@+id/area_num"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="###"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/calc_N"
            app:layout_constraintEnd_toStartOf="@+id/spinner2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:entries="@array/totalsize"
            android:textColor="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/area_num"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/area_num"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/calc_N"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_N"
            android:background="@drawable/input_bg"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
            app:layout_constraintEnd_toStartOf="@+id/calc_P"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/area_num" />

        <Button
            android:id="@+id/calc_P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_P"
            android:background="@drawable/input_bg"
            android:textStyle="bold|italic"
            app:layout_constraintBaseline_toBaselineOf="@+id/calc_N"
            app:layout_constraintEnd_toStartOf="@+id/calc_K"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_N" />

        <Button
            android:id="@+id/calc_K"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_K"
            android:background="@drawable/input_bg"
            android:textStyle="italic|bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/calc_P"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/calc_P" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calc_N">

            <TextView
                android:id="@+id/Result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:textAlignment="center"
                android:textColor="#ff0000"
                android:textSize="22dp" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/grass">

    </RelativeLayout>

</RelativeLayout>

